INCLUDES = $(all_includes)
METASOURCES = AUTO
noinst_HEADERS = ncl.h nxsassumptionsblock.h nxsblock.h nxscharactersblock.h \
	nxsdatablock.h nxsdefs.h nxsdiscretedatum.h nxsdiscretematrix.h nxsdistancedatum.h \
	nxsdistancesblock.h nxsemptyblock.h nxsexception.h nxsindent.h nxsreader.h nxssetreader.h \
	nxsstring.h nxstaxablock.h nxstoken.h nxstreesblock.h
noinst_LTLIBRARIES = libNCL.la
libNCL_la_SOURCES = nxsassumptionsblock.cpp nxsblock.cpp nxscharactersblock.cpp \
	nxsdatablock.cpp nxsdiscretedatum.cpp nxsdiscretematrix.cpp nxsdistancedatum.cpp \
	nxsdistancesblock.cpp nxsemptyblock.cpp nxsexception.cpp nxsreader.cpp nxssetreader.cpp \
	nxsstring.cpp nxstaxablock.cpp nxstoken.cpp nxstreesblock.cpp
