AUTOMAKE_OPTIONS = subdir-objects

bin_PROGRAMS = dppdiv

dppdiv_SOURCES = \
	dppdiv.cpp \
	Alignment.cpp \
	MbEigensystem.cpp \
	MbMath.cpp \
	MbRandom.cpp \
	MbTransitionMatrix.cpp \
	Mcmc.cpp \
	Model.cpp \
	Parameter.cpp \
	Parameter_basefreq.cpp \
	Parameter_exchangeability.cpp \
	Parameter_rate.cpp \
	Parameter_shape.cpp \
	Parameter_tree.cpp \
	Parameter_cphyperp.cpp \
	Parameter_treescale.cpp \
	Parameter_speciaton.cpp \
	Parameter_expcalib.cpp \
	Calibration.cpp
