INCLUDES = $(all_includes)
METASOURCES = AUTO
noinst_HEADERS = Assign.h Block.h CacheFriendlyProduct.h Coeffs.h \
	CommaInitializer.h Cwise.h CwiseBinaryOp.h CwiseNullaryOp.h CwiseUnaryOp.h \
	DiagonalCoeffs.h DiagonalMatrix.h DiagonalProduct.h Dot.h Flagged.h Functors.h Fuzzy.h \
	GenericPacketMath.h IO.h Map.h MapBase.h MathFunctions.h Matrix.h MatrixBase.h \
	MatrixStorage.h Minor.h NestByValue.h NumTraits.h Part.h Product.h Redux.h \
	SolveTriangular.h Sum.h Swap.h Transpose.h Visitor.h
SUBDIRS = arch util
